--- a/MyFirstApp/app/css/app.css
+++ b/MyFirstApp/app/css/app.css
@@ -1,5 +1,4 @@
-body
-{
+body {
     background-image: none;
 }
 
@@ -19,8 +18,7 @@ input[type='text']:focus,
 input[type='time']:focus,
 input[type='url']:focus,
 input[type='week']:focus,
-textarea:focus
-{
+textarea:focus {
     outline: 0 none !important;
 }
 
@@ -29,24 +27,19 @@ textarea:focus
 .btn.focus,
 .btn:active.focus,
 .btn:active:focus,
-.btn:focus
-{
+.btn:focus {
     outline: none;
     outline-offset: 0;
 }
 
-.btn-circle
-{
+.btn-circle {
     font-size: 22px;
     font-weight: bold;
-
     display: inline-block;
-
     width: 50px;
     height: 50px;
     margin: 5px;
     padding: 11px 0 0 15px;
-
     color: white;
     border: 1px solid #c6c6c6;
     border-radius: 25px;
@@ -54,7 +47,6 @@ textarea:focus
     box-shadow: 0 2px grey;
 }
 
-.btn-circle:active
-{
-    border: 2px solid #888585;
+.btn-circle:active {
+    border: 1px solid #888585;
 }
